Bug 104381 - swr fails to build since llvm-svn r321257
Summary: swr fails to build since llvm-svn r321257
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/swr (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-23 20:18 UTC by Laurent carlier
Modified: 2018-01-06 10:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Laurent carlier 2017-12-23 20:18:14 UTC
The output:
mv -f rasterizer/jitter/.deps/libmesaswr_la-builder_misc.Tpo rasterizer/jitter/.deps/libmesaswr_la-builder_misc.Plo
rasterizer/jitter/JitManager.cpp: In member function ‘virtual std::unique_ptr<llvm::MemoryBuffer> JitCache::getObject(const llvm::Module*)’:
rasterizer/jitter/JitManager.cpp:501:36: error: ‘getNewUninitMemBuffer’ is not a member of ‘llvm::MemoryBuffer’
         pBuf = llvm::MemoryBuffer::getNewUninitMemBuffer(size_t(header.GetBufferSize()));
                                    ^~~~~~~~~~~~~~~~~~~~~
mv -f rasterizer/jitter/.deps/libmesaswr_la-fetch_jit.Tpo rasterizer/jitter/.deps/libmesaswr_la-fetch_jit.Plo
make[5]: *** [Makefile:2575: rasterizer/jitter/libmesaswr_la-JitManager.lo] Error 1
make[5]: *** Waiting for unfinished jobs....


The llvm commit:
https://github.com/llvm-mirror/llvm/commit/2a379e0e2730b7209693f587d7039b44c1323453
Comment 1 Laurent carlier 2018-01-06 10:31:08 UTC
Fixed in trunk with ad218754c79e0af61d5ba225a4b195cb55c2cac9


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.